Remove index2.html and move the changes to individual ingredient.html and drink.html files

--- a/drink.html
+++ b/drink.html
@@ -12,9 +12,39 @@
 </head>
 
 <body class="flex-column min-100-vh">
-  <header>
-    <h1>drink page</h1>
-  </header>
+
+  <!-- Write your code here -->
+
+  <section>
+    <div>Placeholder</div>
+  </section>
+  <hr>
+
+  <section>
+    <h2>drink?:</h2>
+    <div>
+        <button type="submit" id="randomcocktail"  class="btn-drink">Random Cocktail</button>
+    </div>
+   </section>
+
+  <section>
+        <div id="cocktailcard">pic</div>
+  </section>
+
+  <section>
+    <h2>drink?:</h2>
+    <div>
+        <button type="submit" id="randombeer" class="btn-drink">Random Beer</button>
+    </div>
+  </section>
+
+  <section>
+    <div id="beercard">pic</div>
+  </section>
+  <hr>
+  <section>
+    <div>Local Storage: Previous searched results</div>
+  </section>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/drink.js"></script>
