--- a/ingredient.html
+++ b/ingredient.html
@@ -12,9 +12,39 @@
 </head>
 
 <body>
-  <header>
-    <h1>ingredient page</h1>
-  </header>
+
+  <!-- Write your code here -->
+  
+  <section>
+    <div>Placeholder</div>
+  </section>
+
+  <hr>
+
+  <section>
+    <h2>Choose your main ingredients:</h2>
+    <form>
+        <div>
+            <label for="meat">Meats?</label>
+            <input id="meat" type="text" />
+        </div>
+        <div>
+            <label for="veg">Vegetables?</label>
+            <input id="veg" type="text" />
+        </div>
+        <div>
+            <label for="fruit">Fruits?</label>
+            <input id="fruit" type="text" />
+        </div>
+        <button type="submit" class="btn-food">Find my dinner</button>
+    </form>
+  </section>
+
+  <hr>
+
+  <section>
+    <div id="foodcards">pic</div>
+  </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/drink.js"></script>
