--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
   <header>
-    <h1>main page</h1>
+    <h1>Food Recipe App</h1>
   </header>
   
   <main>
     <div style="padding-top:54px;padding-bottom:54px">
-        <iframe src="ingredient.html" title="ingredient page" width="49%" height="800"></iframe>
-        <iframe src="drink.html" title="drink page" width="49%" height="800"></iframe>
+        <iframe src="ingredient.html" title="ingredient page" width="100%" height="600"></iframe>
+        <iframe src="drink.html" title="drink page" width="100%" height="600"></iframe>
     </div>
   </main>
 
