Fix type error for not including ingredient.js and create key press handler in ingredient.js

--- a/ingredient.html
+++ b/ingredient.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Write your code here -->
-  
+
   <section>
     <div>Placeholder</div>
   </section>
@@ -23,7 +23,7 @@
 
   <section>
     <h2>Choose your main ingredients:</h2>
-    <form>
+    <form id="user-form">
         <div>
             <label for="meat">Meats?</label>
             <input id="meat" type="text" />
@@ -47,7 +47,7 @@
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="./assets/js/drink.js"></script>
+  <script src="./assets/js/ingredient.js"></script>
 </body>
 
 </html>
