started html and jc code for drink

--- a/drink.html
+++ b/drink.html
@@ -15,7 +15,31 @@
   <header>
     <h1>drink page</h1>
   </header>
+
+
+  <div id="cocktail-maker">
+    <div id="random-cocktail"></div>
+    <button id="cocktail-button"> Fancy a cocktail? </button>
+  </div>
+
+  <div id="cocktail-creation">
+    <!-- cocktail title here = div  -->
+    <!-- cocktail img here = img -->
+  </div>
+
+  <div id="beer-maker">
+    <div id="random-beer"></div>
+    <button id="beer-button"> Fancy a cocktail? </button>
+  </div>
+
+  <div id="beer-creation">
+    <!-- beer title here = div  -->
+    <!-- beer img here = img -->
+  </div>
   
+<!-- cocktail and beer can have same styling = same class
+    will need some to be aside right and other left -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/drink.js"></script>
 </body>
