working api for cocktail

--- a/drink.html
+++ b/drink.html
@@ -29,7 +29,7 @@
 
   <div id="beer-maker">
     <div id="random-beer"></div>
-    <button id="beer-button"> Fancy a cocktail? </button>
+    <button id="beer-button"> Fancy a beer? </button>
   </div>
 
   <div id="beer-creation">
