--- a/drink.html
+++ b/drink.html
@@ -12,40 +12,34 @@
 </head>
 
 <body class="flex-column min-100-vh">
+  <header>
+    <h1>drink page</h1>
+  </header>
 
-  <!-- Write your code here -->
 
-  <section>
-    <div>Placeholder</div>
-  </section>
-  <hr>
+  <div id="cocktail-maker">
+    <div id="random-cocktail"></div>
+    <button id="cocktail-button"> Fancy a cocktail? </button>
+  </div>
 
-  <section>
-    <h2>drink?:</h2>
-    <div>
-        <button type="submit" id="randomcocktail"  class="btn-drink">Random Cocktail</button>
-    </div>
-   </section>
+  <div id="cocktail-creation">
+    <!-- cocktail title here = div  -->
+    <!-- cocktail img here = img -->
+  </div>
 
-  <section>
-        <div id="cocktailcard">pic</div>
-  </section>
+  <div id="beer-maker">
+    <div id="random-beer"></div>
+    <button id="beer-button"> Fancy a beer? </button>
+  </div>
 
-  <section>
-    <h2>drink?:</h2>
-    <div>
-        <button type="submit" id="randombeer" class="btn-drink">Random Beer</button>
-    </div>
-  </section>
-
-  <section>
-    <div id="beercard">pic</div>
-  </section>
-  <hr>
-  <section>
-    <div>Local Storage: Previous searched results</div>
-  </section>
+  <div id="beer-creation">
+    <!-- beer title here = div  -->
+    <!-- beer img here = img -->
+  </div>
   
+<!-- cocktail and beer can have same styling = same class
+    will need some to be aside right and other left -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/drink.js"></script>
 </body>
