--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   
   <main>
     <div style="padding-top:54px;padding-bottom:54px">
-        <iframe src="ingredient.html" title="ingredient page" width="100%" height="600"></iframe>
-        <iframe src="drink.html" title="drink page" width="100%" height="600"></iframe>
+        <iframe src="ingredient.html" title="ingredient page"></iframe>
+        <iframe src="drink.html" title="drink page"></iframe>
     </div>
   </main>
 
