--- a/ingredient.html
+++ b/ingredient.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/ingredient.css" />
+  
   <title>ingredient page</title>
 </head>
 
@@ -22,7 +23,7 @@
   <hr>
 
   <section>
-    <h2>Choose your main ingredients:</h2>
+    <h3>Choose your main ingredients:</h3>
     <form id="user-form">
         <div>
             <label for="meat">Meats?</label>
@@ -43,50 +44,7 @@
   <hr>
 
   <section>
-    <div id="foodcards">
-        <section>
-            <div>
-                <figure id = "picture_0">
-                </figure>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <figure id = "picture_1">
-                </figure>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <figure id = "picture_2">
-                </figure>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <figure id = "picture_3">
-                </figure>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <figure id = "picture_4">
-                </figure>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <figure id = "picture_5">
-                </figure>
-            </div>
-        </section>
-    </div>
-
+    <div id="foodcards">pic</div>
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
