--- a/ingredient.html
+++ b/ingredient.html
@@ -17,7 +17,9 @@
   <!-- Write your code here -->
 
   <section>
-    <div>Placeholder</div>
+    <div>   
+      <h4>Placeholder</h4>
+    </div>
   </section>
 
   <hr>
