--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 <body>
   <header>
-    <h1>Food Recipe App</h1>
+    <div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <h1 class="animate"> Food Recipe App</h1>
+    </div>
+  </div>
+</div>
   </header>
   
   <main>
