adding placeholder and local storage fix

--- a/ingredient.html
+++ b/ingredient.html
@@ -10,6 +10,12 @@
   <link rel="stylesheet" href="./assets/css/ingredient.css" />
   
   <title>ingredient page</title>
+  <p> Welcome! We're here to satisfy your food cravings and save your time by finding your dinner for you!
+    To get started, first type a meat of your choice, then a vegetable, and lastly a fruit.
+    To generate meals containing these ingredients click on the 'Find My Dinner' button.
+   We've also got you covered if you're thirsty. If you want a cocktail then click on the
+    'Fancy a Cocktail?' button, or if you want a beer then click on the 'Fancy a Beer' button.
+   So what do you fancy? </p>
 </head>
 
 <body>
